--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "respo"
-version = "0.0.1"
+version = "0.0.0-a1"
 edition = "2021"
 description = "a tiny virtual DOM library migrated from ClojureScript"
 license = "MIT"
@@ -24,4 +24,5 @@ features = [
   'Document',
   'Element',
   'Window',
+  "HtmlElement",
 ]
