early attempt to render DOM

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 yarn.lock -diff linguist-generated
 Cargo.lock -diff linguist-generated
 lib -diff linguist-generated
+
+examples/snippet_*.rs -diff linguist-generated
