some attempts for injecting dispatch funcion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,8 @@ features = [
   'Element',
   'Window',
   "HtmlElement",
+  "HtmlInputElement",
+  "MouseEvent",
+  "KeyboardEvent",
+  "InputEvent",
 ]
