skeleton of code implementing diff/patch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,9 @@ features = [
   "MouseEvent",
   "KeyboardEvent",
   "InputEvent",
+  "Node",
+  "NodeList",
+  "Element",
+  "HtmlCollection",
+  "CssStyleDeclaration",
 ]
