--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ js-sys = "0.3.57"
 wasm-bindgen = "0.2.80"
 console_error_panic_hook = "0.1.7"
 lazy_static = "1.4.0"
+serde = { version = "1.0.137", features = [ "derive" ] }
+serde_json = "1.0.81"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
