make it work with a basic list

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ console_error_panic_hook = "0.1.7"
 lazy_static = "1.4.0"
 serde = { version = "1.0.137", features = [ "derive" ] }
 serde_json = "1.0.81"
+uuid = { version = "1.0.0", features = [ "v4", "js" ] }
+cirru_parser = "0.1.20"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
