--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "respo"
 version = "0.0.1"
 edition = "2021"
 description = "a tiny virtual DOM library migrated from ClojureScript"
-license = "Apache License 2.0"
+license = "Apache-2.0"
 repository = "https://github.com/Respo/respo.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
