--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0.137", features = [ "derive" ] }
 serde_json = "1.0.81"
 uuid = { version = "1.0.0", features = [ "v4", "js" ] }
 cirru_parser = "0.1.20"
+rust-hsluv = "0.1.4"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
