--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "wasm": "cargo watch --why -w src/ -s 'wasm-pack build -t web'"
+    "wasm": "cargo watch --why -w src/ -s 'wasm-pack build -t web --dev'"
   },
   "devDependencies": {
     "vite": "^2.9.9"
