--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "respo"
-version = "0.0.11-a1"
+version = "0.0.11-a2"
 edition = "2021"
 description = "a tiny virtual DOM library migrated from ClojureScript"
 license = "Apache-2.0"
@@ -43,4 +43,5 @@ features = [
   "Element",
   "HtmlCollection",
   "CssStyleDeclaration",
+  "FocusEvent",
 ]
