--- a/.github/workflows/upload.yaml
+++ b/.github/workflows/upload.yaml
@@ -33,7 +33,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - run: cargo test && wasm-pack build -t web
+      - run: cargo test && wasm-pack build -t web demo_respo
 
       - run: yarn && yarn vite build --base=./
 
