--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,48 +1,6 @@
-[package]
-name = "respo"
-version = "0.0.12-a4"
-edition = "2021"
-description = "a tiny virtual DOM library migrated from ClojureScript"
-license = "Apache-2.0"
-repository = "https://github.com/Respo/respo.rs"
-homepage = "http://respo-mvc.org"
-documentation = "https://docs.rs/crate/respo/"
-readme = "README.md"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-js-sys = "0.3.57"
-wasm-bindgen = "0.2.80"
-console_error_panic_hook = "0.1.7"
-lazy_static = "1.4.0"
-serde = { version = "1.0.137", features = [ "derive" ] }
-serde_json = "1.0.81"
-uuid = { version = "1.1.1", features = [ "v4", "js" ] }
-cirru_parser = "0.1.22"
-rust-hsluv = "0.1.4"
-
-[lib]
-crate-type = ["cdylib", "rlib"]
-
-[dependencies.web-sys]
-version = "0.3.57"
-features = [
-  "console",
-  'Document',
-  "HtmlHeadElement",
-  'Element',
-  'Window',
-  "HtmlElement",
-  "HtmlInputElement",
-  "MouseEvent",
-  "KeyboardEvent",
-  "InputEvent",
-  "Node",
-  "NodeList",
-  "Element",
-  "HtmlCollection",
-  "CssStyleDeclaration",
-  "FocusEvent",
-  "HtmlLabelElement",
+members = [
+  "respo",
+  "demo_respo",
 ]
