--- a/demo_respo/Cargo.toml
+++ b/demo_respo/Cargo.toml
@@ -17,6 +17,7 @@ js-sys = "0.3.57"
 wasm-bindgen = "0.2.80"
 console_error_panic_hook = "0.1.7"
 serde = { version = "1.0.137", features = [ "derive" ] }
+serde_json = "1.0.81"
 uuid = { version = "1.1.1", features = [ "v4", "js" ] }
 
 [dependencies.web-sys]
@@ -39,4 +40,6 @@ features = [
   "CssStyleDeclaration",
   "FocusEvent",
   "HtmlLabelElement",
+  "BeforeUnloadEvent",
+  "Storage"
 ]
