--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -27,7 +27,7 @@ jobs:
       - run: cargo test
 
       - run: rustup target add wasm32-unknown-unknown && trunk build
-        working-directory: demo_respo/
+        working-directory: demo_respo
 
       - uses: katyo/publish-crates@v1
         with:
