prototyped prompt modal

--- a/respo/Cargo.toml
+++ b/respo/Cargo.toml
@@ -33,6 +33,7 @@ features = [
   'Window',
   "HtmlElement",
   "HtmlInputElement",
+  "HtmlTextAreaElement",
   "MouseEvent",
   "KeyboardEvent",
   "InputEvent",
