--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - run: cargo test
 
-      - run: rustup target add wasm32-unknown-unknown && trunk build
+      - run: rustup target add wasm32-unknown-unknown && trunk build --release
         working-directory: demo_respo
 
       - uses: katyo/publish-crates@v1
