handle esc shortcut for dialogs

--- a/respo/Cargo.toml
+++ b/respo/Cargo.toml
@@ -36,6 +36,7 @@ features = [
   "HtmlTextAreaElement",
   "MouseEvent",
   "KeyboardEvent",
+  "KeyboardEventInit",
   "InputEvent",
   "Node",
   "NodeList",
