--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,12 +8,14 @@ jobs:
   publish:
     name: Publish to cargo
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
 
-      - uses: actions-rs/toolchain@v1
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
+          toolchain: nightly
+          components: clippy
 
       - uses: jetli/trunk-action@v0.1.0
         with:
