--- a/.github/workflows/upload.yaml
+++ b/.github/workflows/upload.yaml
@@ -10,17 +10,28 @@ jobs:
   build_and_test:
     name: Test
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      contents: read
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
+          toolchain: nightly
+          components: clippy
 
       - uses: jetli/trunk-action@v0.4.0
         with:
           # Optional version of trunk to install(eg. 'v0.8.1', 'latest')
           version: 'latest'
+
+      - uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
 
       - run: cargo test
 
