--- a/respo/Cargo.toml
+++ b/respo/Cargo.toml
@@ -12,19 +12,20 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-js-sys = "0.3.64"
-wasm-bindgen = "0.2.87"
+js-sys = "0.3.69"
+wasm-bindgen = "0.2.92"
 lazy_static = "1.4.0"
-serde = { version = "1.0.188", features = [ "derive" ] }
-serde_json = "1.0.106"
-cirru_parser = "0.1.25"
+serde = { version = "1.0.203", features = [ "derive" ] }
+serde_json = "1.0.117"
+cirru_parser = "0.1.31"
+# cirru_parser = { path = "/Users/chenyong/repo/cirru/parser.rs" }
 rust-hsluv = "0.1.4"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies.web-sys]
-version = "0.3.64"
+version = "0.3.69"
 features = [
   "console",
   'Document',
