--- a/demo_respo/Cargo.toml
+++ b/demo_respo/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+memoize = "0.4.2"
 respo = { path = "../respo/" }
 js-sys = "0.3.69"
 wasm-bindgen = "0.2.92"
