--- a/demo_respo/Cargo.toml
+++ b/demo_respo/Cargo.toml
@@ -18,6 +18,8 @@ js-sys = "0.3.69"
 wasm-bindgen = "0.2.92"
 console_error_panic_hook = "0.1.7"
 uuid = { version = "1.8.0", features = [ "v4", "js" ] }
+serde = { version = "1.0.203", features = ["derive", "rc"] }
+serde_json = "1.0.117"
 
 [dependencies.web-sys]
 version = "0.3.69"
