--- a/respo/Cargo.toml
+++ b/respo/Cargo.toml
@@ -18,6 +18,8 @@ lazy_static = "1.4.0"
 cirru_parser = "0.1.31"
 # cirru_parser = { path = "/Users/chenyong/repo/cirru/parser.rs" }
 rust-hsluv = "0.1.4"
+serde = { version = "1.0.203", features = ["derive", "rc"] }
+serde_json = "1.0.117"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
