--- a/respo/Cargo.toml
+++ b/respo/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 description = "a tiny virtual DOM library migrated from ClojureScript"
 license = "Apache-2.0"
 repository = "https://github.com/Respo/respo.rs"
-homepage = "http://respo-mvc.org"
+homepage = "https://respo-mvc.org"
 documentation = "https://docs.rs/crate/respo/"
 readme = "README.md"
 
@@ -20,7 +20,8 @@ cirru_parser = "0.1.31"
 rust-hsluv = "0.1.4"
 serde = { version = "1.0.203", features = ["derive", "rc"] }
 serde_json = "1.0.117"
-respo_state_derive = { path = "../respo_state_derive" }
+# respo_state_derive = { path = "../respo_state_derive" }
+respo_state_derive = "0.0.1"
 
 
 [lib]
